2009-03-18 stranger <schmitz@lat-lon.de>
    Encoding layer names and format properly.

2009-03-15 mentaer <sstein@geo.uzh.ch>
    Fixed issue (bugreport) 2660283 for Jython console - the button added
    by RoadTool.py is now shown right of the textfield and not below.
    (However, the bug report contains some more comments)
    
2009-03-15 michaudm <michael.michaud@free.fr>
    Add, remove and fix three small scripts in the BeanTools script directory
    
2009-03-12 javamap <sunburned.surveyor@gmail.com>
    Fixed issue/feature request 1938020  - selections generated with
    the spatial query function can now be deleted
    
2009-03-08 mentaer <sstein@geo.uzh.ch>
    Fixed issue (bugreport) 1786353  - improved Layer description for A/B, 
    i.e. what source and what target layer is.
    
2009-03-08 mentaer <sstein@geo.uzh.ch>
    Fixed issue (bugreport) 1779771  - removed confusing scale units / label.
    
2009-03-08 mentaer <sstein@geo.uzh.ch>
    Fixed bug 2673544 - made Cut Polygon Tool undo-able.
    
2009-03-08 mentaer <sstein@geo.uzh.ch>
    Fixed bugs 2628678 and 2514296 - Auto Complete Polygons is now 
    undo-able and adds polygons only to an editable layer (i.e. the
    tool choses the next editable layer for drawing or creates
    a new layer).
    
2009-03-08 mentaer <sstein@geo.uzh.ch>
    Fixed bug 2660257 - enabled reading of LinearRing geometries 
    from JML files.
    
2009-02-22 mentaer <sstein@geo.uzh.ch>
    Added layer context menus for Pirol/Sextante raster images.
    
2009-02-21 mentaer <sstein@geo.uzh.ch>
    Created new "statistics" menu in tools. Moved feature-, layer-, 
    and attribute statistics functions into the menu.
    
2009-02-20 michaudm <michael.michaud@free.fr>
	Newly created layers are marked with featureCollectionModified=true.
	So when OpenJUMP is closed, it should ask for saving the data.
    
2009-02-16 mentaer <sstein@geo.uzh.ch>
    Integrated RasterImageLayer from Pirol - this will allow to