@@ -144,11 +144,12 @@ public class QuantileColorThemingState implements ColorThemingStylePanel.State {
         */
     	//-- sstein: new code
         double[] data = new double[attributeValues.size()];
-        int i=0;
+        int i=0; boolean isInteger = false;
         for (Iterator iterator = attributeValues.iterator(); iterator.hasNext();) {
 			Object val = (Object) iterator.next();
 			if (val instanceof Integer){
 				data[i] = (Integer)val;
+				isInteger = true;
 			}
 			else if (val instanceof Double){
 				data[i] = (Double)val;
@@ -161,9 +162,20 @@ public class QuantileColorThemingState implements ColorThemingStylePanel.State {
         double[] breaks = Classifier1D.classifyEqualNumber(data, classCount);
         double minVal = org.math.array.DoubleArray.min(data);
         Collection filteredValues = new ArrayList();
-        filteredValues.add(new Double(minVal));
+        //add minVal as smallest value
+        if(isInteger){
+            filteredValues.add(new Integer((int)minVal));
+        }
+        else{
+            filteredValues.add(new Double(minVal));
+        }	
         for (int j = 0; j < breaks.length; j++) {
-			filteredValues.add(new Double(breaks[j]));
+            if(isInteger){
+            	filteredValues.add(new Integer((int)breaks[j]));
+            }
+            else{
+            	filteredValues.add(new Double(breaks[j]));
+            }
 		}
         //-- sstein: end
         return filteredValues;
